CMS7-7260: update date/time model when one of the child components values changes, fix layout of date/time field
In Wicket 6, the AjaxFormComponentUpdatingBehaviors of the child components of the YuiDateTimeField are called 
*before* the date/time model of the parent is updated (it used to be the other way around). Hence, each change 
resets the date/time back to the initial value. Instead, each behavior now sets a 'shouldUpdate' flag in the 
date/time field component, and the model is updated when the flag is set.
  
The broken layout had a similar cause. Previously, editor.css was included *before* yuidatetime.css, so styles
in the latter could redefine properties in the former. The order is now reversed (yuidatetime.css is now 
included before editor.css), which broke the styling. For example, all borders around the individual fields
were missing. Fixing the order via HeaderItem dependencies turned out to be difficult, since yuidatetime.css 
is in the API while editor.css is in the engine. Instead I choose to fix it in CSS only.

--- a/cms/api/src/main/java/org/hippoecm/frontend/plugins/yui/datetime/yuidatetime.css
+++ b/cms/api/src/main/java/org/hippoecm/frontend/plugins/yui/datetime/yuidatetime.css
@@ -25,7 +25,7 @@
 }
 
 .yui-date-time-field input {
-  border: 1px solid #e3e3e3;
+  border: 1px solid #e3e3e3 !important;
   padding: 2px;
   height: 14px;
   float: left;
